--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ comm==0.2.3
 debugpy==1.8.17
 decorator==5.2.1
 distro==1.9.0
+dotenv==0.9.9
 executing==2.2.1
 h11==0.16.0
 httpcore==1.0.9
@@ -39,6 +40,7 @@ pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 pyzmq==27.1.0
 requests==2.32.5
